syntax = "proto3";

package message;

option go_package = "github.com/ISSuh/sos/domain/model/message";

message ObjectID {
    int64 id = 1;
}
